; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_fbt.c_fbt_cleanup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/dev/dtrace/extr_fbt.c_fbt_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fbt_invop = common dso_local global i32 0, align 4
@fbt_probetab = common dso_local global i32* null, align 8
@fbt_probetab_size = common dso_local global i32 0, align 4
@fbt_probetab_mask = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @fbt_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fbt_cleanup(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @fbt_invop, align 4
  %4 = call i32 @dtrace_invop_remove(i32 %3)
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @ddi_remove_minor_node(i32* %5, i32* null)
  %7 = load i32*, i32** @fbt_probetab, align 8
  %8 = load i32, i32* @fbt_probetab_size, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 %9, 8
  %11 = trunc i64 %10 to i32
  %12 = call i32 @kmem_free(i32* %7, i32 %11)
  store i32* null, i32** @fbt_probetab, align 8
  store i64 0, i64* @fbt_probetab_mask, align 8
  ret void
}

declare dso_local i32 @dtrace_invop_remove(i32) #1

declare dso_local i32 @ddi_remove_minor_node(i32*, i32*) #1

declare dso_local i32 @kmem_free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
